sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value getMondeValeurs
		while (!plusPetit(getMondeValeurs()-2:Int, getMondeValeurs()-3:Int) :Boolean) 
                                  ^